# openshift-cli-installer

./: .flake8  .pre-commit-config.yaml  .release-it.json  Dockerfile  Makefile  OWNERS  README.md  pyproject.toml  pytest.ini  renovate.json  tox.ini
.github/: in-solidarity.yml
app/: cli.py  click_dict_type.py
app/libs/: aws_ipi_clusters.py  destroy_all_clusters.py  destroy_clusters.py  rosa_clusters.py
app/manifests/: install-config-template.j2  install-config.yaml  setup-vpc.tf
app/utils/: const.py  helpers.py
openshift_cli_installer/: cli.py  cli_entrypoint.py
openshift_cli_installer/libs/: aws_ipi_clusters.py  destroy_clusters.py  osd_clusters.py  rosa_clusters.py  user_input.py
openshift_cli_installer/libs/clusters/: aws_ipi_cluster.py  ipi_cluster.py  ocm_cluster.py  ocp_cluster.py  ocp_clusters.py  osd_cluster.py  rosa_cluster.py
openshift_cli_installer/libs/managed_clusters/: acm_clusters.py  helpers.py  osd_clusters.py  rosa_clusters.py
openshift_cli_installer/libs/unmanaged_clusters/: aws_ipi_clusters.py
openshift_cli_installer/manifests/: aws-install-config-template.j2  clusters.example.yaml  gcp-install-config-template.j2  install-config-template.j2  setup-vpc.tf
openshift_cli_installer/scripts/: openshift-cli-installer-build-command.py
openshift_cli_installer/tests/: all_aws_versions.json  all_osd_versions.py  all_rosa_versions.py  test_build_command_script.py  test_cluster_version.py  test_user_input.py  utils.py
openshift_cli_installer/tests/cluster_version/: aws_base_versions.py  constants.py  rosa_osd_base_versions.py  test_aws_version.py  test_osd_rosa_versions.py
openshift_cli_installer/utils/: cli_utils.py  cluster_versions.py  clusters.py  const.py  gcp.py  gcp_utils.py  general.py  helpers.py
scripts/code_check/: unused_code.py
